--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@solana/web3.js": "^1.98.0",
     "esrun": "^3.2.26",
     "next": "^14.0.3",
+    "openai": "^4.78.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
